# Company

./: .env  .replit  alembic.ini  pyproject.toml  replit.md  requirements.txt  worker.py
alembic/: env.py
alembic/versions/: 716352f59159_initial_migration.py  ceb0664502e5_add_company_table_and_update_document_.py
app/: __init__.py  main.py  tasks.py
app/agents/: __init__.py  agent_orchestrator.py  base_agent.py  cs_expert.py  legal_analyst.py  quality_reviewer.py
app/api/v1/: deps.py
app/api/v1/endpoints/: auth.py  documents.py  premium_research.py  search.py  summaries.py
app/core/: auth.py  celery_app.py  config.py  database.py  logging.py  rate_limiting.py
app/db/: base.py  models.py
app/scrapers/: __init__.py  base_scraper.py  companies_act_scraper.py  company_data_ingestor.py  constitution_scraper.py  document_processor.py  judgment_ingestor.py  nclt_nclat_scraper.py  run_ingestion.py  supreme_court_scraper.py
app/services/: ingestion_service.py  parser.py  premium_research_engine.py  quality_assurance.py  search.py  storage.py  summariser_agent.py
app/tasks/: celery_app.py  ingestion.py  summarise.py
attached_assets/: Backend-CS-Research_1757071745344.docx  Pasted-Now-carefully-audit-the-entire-backend-you-just-created-Do-not-just-describe-but-actually-cross-ch-1757075490890_1757075490893.txt
tests/: conftest.py  test_agents.py  test_api.py  test_quality_assurance.py
